--- a/styles/overlay.css
+++ b/styles/overlay.css
@@ -64,17 +64,41 @@
 }
 
 #poke-details-div-overlay {
-    height: 100%;
+    height: 90%;
     width: 100%;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
     overflow-y: auto;
+    overflow-x: hidden;
     padding-top: 2rem;
     font-size: 2rem;
     z-index: 100;
 }
+
+#poke-details-div-overlay::-webkit-scrollbar-thumb:hover {
+    cursor: pointer;
+    background-color: #ffffff75;
+}
+
+#poke-details-div-overlay::-webkit-scrollbar {
+    width: 20px;
+}
+
+#poke-details-div-overlay::-webkit-scrollbar-track {
+    background-color: #0000007a;
+    background-clip: content-box;
+    border-top: 3rem solid transparent;
+}
+
+#poke-details-div-overlay::-webkit-scrollbar-thumb {
+  background-color: #e6e6e649;
+  border: 2px solid #0000007a;
+  background-clip: content-box;
+border-top: 3rem solid transparent;
+}
+
 
 #poke-details-div-overlay p{
     margin-block-start: 0;
@@ -258,6 +282,7 @@
     left: 0;
     z-index: 5000;
     display: flex;
+    overflow: hidden;
     justify-content: center;
     align-items: center;
     width: 100%;
